--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
         const portfolioData = {
             'brand': [
                 { title: 'Brand 01', img: 'ảnh/damaxz.png' },
-                { title: 'Brand 02', img: 'ảnh/dự án/LOGO/2.JPG' },
+                { title: 'Brand 02', img: 'ảnh/dự án/LOGO/2.jpg' },
                 { title: 'Brand 03', img: 'ảnh/dự án/LOGO/3.JPG' },
                 { title: 'Brand 04', img: 'ảnh/dự án/LOGO/4.JPG' },
                 { title: 'Brand 05', img: 'ảnh/dự án/LOGO/5.JPG' },
