--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
         .overlay {
             position: absolute;
             inset: 0;
-            background: rgba(32, 110, 255, 0.85); /* Màu xanh accent */
-            color: white;
+            background: rgba(255, 255, 255, 0.85); /* Màu xanh accent */
+            color: rgb(255, 0, 0);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -547,45 +547,45 @@
             'brand': [
                 { title: 'Brand 01', img: 'ảnh/1.jpg' },
                 { title: 'Brand 02', img: 'ảnh/2.jpg' },
-                { title: 'Brand 03', img: 'ảnh/3.JPG' },
-                { title: 'Brand 04', img: 'ảnh/4.JPG' },
-                { title: 'Brand 05', img: 'ảnh/5.JPG' },
-                { title: 'Brand 06', img: 'ảnh/6.JPG' },
-                { title: 'Brand 07', img: 'ảnh/7.JPG' },
-                { title: 'Brand 08', img: 'ảnh/8.JPG' },
+                { title: 'Brand 03', img: 'ảnh/3.jpg' },
+                { title: 'Brand 04', img: 'ảnh/4.jpg' },
+                { title: 'Brand 05', img: 'ảnh/5.jpg' },
+                { title: 'Brand 06', img: 'ảnh/6.jpg' },
+                { title: 'Brand 07', img: 'ảnh/7.jpg' },
+                { title: 'Brand 08', img: 'ảnh/8.jpg' },
                 { title: 'Brand 09', img: 'ảnh/9.PNG' },
             ],
             'packaging': [
-                { title: 'Packaging 01', img: 'ảnh/1.JPG' },
-                { title: 'Packaging 02', img: 'ảnh/2.JPG' },
-                { title: 'Packaging 03', img: 'ảnh/3.JPG' },
-                { title: 'Packaging 04', img: 'ảnh/4.JPG' },
-                { title: 'Packaging 05', img: 'ảnh/5.JPG' },
-                { title: 'Packaging 06', img: 'ảnh/6.JPG' },
-                { title: 'Packaging 07', img: 'ảnh/7.JPG' },
-                { title: 'Packaging 08', img: 'ảnh/8.JPG' },
+                { title: 'Packaging 01', img: 'ảnh/1.jpg' },
+                { title: 'Packaging 02', img: 'ảnh/2.jpg' },
+                { title: 'Packaging 03', img: 'ảnh/3.jpg' },
+                { title: 'Packaging 04', img: 'ảnh/4.jpg' },
+                { title: 'Packaging 05', img: 'ảnh/5.jpg' },
+                { title: 'Packaging 06', img: 'ảnh/6.jpg' },
+                { title: 'Packaging 07', img: 'ảnh/7.jpg' },
+                { title: 'Packaging 08', img: 'ảnh/8.jpg' },
                 { title: 'Packaging 09', img: 'ảnh/9.PNG' },
             ],
             'logo': [
-                { title: 'Logo 01', img: 'ảnh/1.JPG' },
-                { title: 'Logo 02', img: 'ảnh/2.JPG' },
-                { title: 'Logo 03', img: 'ảnh/3.JPG' },
-                { title: 'Logo 04', img: 'ảnh/4.JPG' },
-                { title: 'Logo 05', img: 'ảnh/5.JPG' },
-                { title: 'Logo 06', img: 'ảnh/6.JPG' },
-                { title: 'Logo 07', img: 'ảnh/7.JPG' },
-                { title: 'Logo 08', img: 'ảnh/8.JPG' },
+                { title: 'Logo 01', img: 'ảnh/1.jpg' },
+                { title: 'Logo 02', img: 'ảnh/2.jpg' },
+                { title: 'Logo 03', img: 'ảnh/3.jpg' },
+                { title: 'Logo 04', img: 'ảnh/4.jpg' },
+                { title: 'Logo 05', img: 'ảnh/5.jpg' },
+                { title: 'Logo 06', img: 'ảnh/6.jpg' },
+                { title: 'Logo 07', img: 'ảnh/7.jpg' },
+                { title: 'Logo 08', img: 'ảnh/8.jpg' },
                 { title: 'Logo 09', img: 'ảnh/9.PNG' },
             ],
             'mockup': [
-                { title: 'Mockup 01', img: 'ảnh/1.JPG' },
-                { title: 'Mockup 02', img: 'ảnh/2.JPG' },
-                { title: 'Mockup 03', img: 'ảnh/3.JPG' },
-                { title: 'Mockup 04', img: 'ảnh/4.JPG' },
-                { title: 'Mockup 05', img: 'ảnh/5.JPG' },
-                { title: 'Mockup 06', img: 'ảnh/6.JPG' },
-                { title: 'Mockup 07', img: 'ảnh/7.JPG' },
-                { title: 'Mockup 08', img: 'ảnh/8.JPG' },
+                { title: 'Mockup 01', img: 'ảnh/1.jpg' },
+                { title: 'Mockup 02', img: 'ảnh/2.jpg' },
+                { title: 'Mockup 03', img: 'ảnh/3.jpg' },
+                { title: 'Mockup 04', img: 'ảnh/4.jpg' },
+                { title: 'Mockup 05', img: 'ảnh/5.jpg' },
+                { title: 'Mockup 06', img: 'ảnh/6.jpg' },
+                { title: 'Mockup 07', img: 'ảnh/7.jpg' },
+                { title: 'Mockup 08', img: 'ảnh/8.jpg' },
                 { title: 'Mockup 09', img: 'ảnh/9.PNG' },
             ]
         };
