--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 { title: 'Brand 06', img: 'ảnh/6.jpg' },
                 { title: 'Brand 07', img: 'ảnh/7.jpg' },
                 { title: 'Brand 08', img: 'ảnh/8.jpg' },
-                { title: 'Brand 09', img: 'ảnh/9.PNG' },
+                { title: 'Brand 09', img: 'ảnh/9.png' },
             ],
             'packaging': [
                 { title: 'Packaging 01', img: 'ảnh/1.jpg' },
@@ -564,7 +564,7 @@
                 { title: 'Packaging 06', img: 'ảnh/6.jpg' },
                 { title: 'Packaging 07', img: 'ảnh/7.jpg' },
                 { title: 'Packaging 08', img: 'ảnh/8.jpg' },
-                { title: 'Packaging 09', img: 'ảnh/9.PNG' },
+                { title: 'Packaging 09', img: 'ảnh/9.png' },
             ],
             'logo': [
                 { title: 'Logo 01', img: 'ảnh/1.jpg' },
@@ -575,7 +575,7 @@
                 { title: 'Logo 06', img: 'ảnh/6.jpg' },
                 { title: 'Logo 07', img: 'ảnh/7.jpg' },
                 { title: 'Logo 08', img: 'ảnh/8.jpg' },
-                { title: 'Logo 09', img: 'ảnh/9.PNG' },
+                { title: 'Logo 09', img: 'ảnh/9.png' },
             ],
             'mockup': [
                 { title: 'Mockup 01', img: 'ảnh/1.jpg' },
@@ -586,7 +586,7 @@
                 { title: 'Mockup 06', img: 'ảnh/6.jpg' },
                 { title: 'Mockup 07', img: 'ảnh/7.jpg' },
                 { title: 'Mockup 08', img: 'ảnh/8.jpg' },
-                { title: 'Mockup 09', img: 'ảnh/9.PNG' },
+                { title: 'Mockup 09', img: 'ảnh/9.png' },
             ]
         };
 
