--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
 
     <footer>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/tandatt.68/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/damax.pdf/"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <p>Website Design by Phạm Tấn Đạt &copy; 2026</p>
