--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             gap: 20px; 
         }
         
+        /* ITEM MẶC ĐỊNH (NGANG 4:3) */
         .grid-item {
             width: 100%; 
             position: relative; 
@@ -194,7 +195,12 @@
             overflow: hidden;
             cursor: pointer;
             border: 1px solid rgba(255,255,255,0.1);
-            aspect-ratio: 4/3; 
+            aspect-ratio: 4/3; /* Mặc định ngang */
+        }
+
+        /* --- CHỈNH SỬA: POSTER CAO HƠN (DỌC 2:3) --- */
+        .grid-item.poster {
+            aspect-ratio: 2/3; /* Đổi thành dọc chuẩn Poster */
         }
 
         /* Chỉ con trỏ dạng pointer cho những item có class 'brand' (vì click được) */
@@ -413,7 +419,7 @@
                 <div class="grid-info"><span class="grid-tag">Poster</span><h3 class="grid-title">JUTU Coffee</h3></div>
             </div>
             <div class="grid-item poster">
-                <img src="ảnh/pt3.png" alt="Poster 3">
+                <img src="ảnh/pt7.png" alt="Poster 3">
                 <div class="grid-info"><span class="grid-tag">Poster</span><h3 class="grid-title">NOVO</h3></div>
             </div>
             <div class="grid-item poster">
@@ -493,6 +499,7 @@
                 <img src="ảnh/10.jpg" alt="Pack 9">
                 <div class="grid-info"><span class="grid-tag">Packaging</span><h3 class="grid-title">Soap Wrapper</h3></div>
             </div>
+
             <div class="grid-item logo">
                 <img src="ảnh/1.jpg" alt="Logo 1">
                 <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Monogram A</h3></div>
