--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         body.light-mode {
             --bg-body: #f4f4f0;      
-            --primary: #1a1a1a;      
+            --primary: #0e0e0e;      
             --accent: #d00000;      
             --glass-bg: rgba(255, 255, 255, 0.75); 
             --glass-border: 1px solid rgba(0, 0, 0, 0.05); 
@@ -219,7 +219,7 @@
         .grid-info {
             position: absolute; bottom: 0; left: 0; width: 100%;
             padding: 20px;
-            background: linear-gradient(to top, rgba(0,0,0,0.9), transparent);
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent);
             opacity: 0; transform: translateY(20px); transition: var(--transition);
             color: white; 
             pointer-events: none; 
@@ -277,7 +277,7 @@
         .project-modal {
             display: none; 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9);
+            background: rgba(0, 0, 0, 0.9);
             backdrop-filter: blur(10px);
             z-index: 2000;
             overflow-y: auto; 
@@ -320,7 +320,7 @@
             height: auto;
             border-radius: 10px;
             border: 1px solid var(--glass-border);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
             animation: fadeUp 0.5s ease forwards;
             opacity: 0;
             transform: translateY(20px);
@@ -551,87 +551,87 @@
 
             <div class="grid-item logo">
                 <img src="ảnh/1.jpg" alt="Logo 1">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Monogram A</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Vận Tải Nhâm Cao</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/2.jpg" alt="Logo 2">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Abstract Fox</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Billiards Quách Siêu</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/3.jpg" alt="Logo 3">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Cyber Key</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">ARV Technology</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/4.jpg" alt="Logo 4">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">CT Audio</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/5.jpg" alt="Logo 5">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">DucPhong Auto</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/6.jpg" alt="Logo 6">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">The Gangster Empire</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/7.jpg" alt="Logo 7">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Sun Laundary</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/8.jpg" alt="Logo 8">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Sweet Chill Ice Cream</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/9.jpg" alt="Logo 9">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Trần Mộc Spa</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/10.png" alt="Logo 10">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Sofe Coffee</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/11.png" alt="Logo 11">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Hunex</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/12.png" alt="Logo 12">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">An Thịnh</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/13.png" alt="Logo 13">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">EFA Education</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/14.png" alt="Logo 14">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Bảo Sơn</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/15.png" alt="Logo 15">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Y Dược</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/16.png" alt="Logo 16">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Sialight</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/17.png" alt="Logo 17">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Only Spa</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/18.png" alt="Logo 18">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Tân Phú Construction</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/19.png" alt="Logo 19">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Sắt Mộc Trường Sa</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/20.png" alt="Logo 20">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Chí Thiện Store</h3></div>
             </div>
             <div class="grid-item logo">
                 <img src="ảnh/21.png" alt="Logo 21">
-                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Water Drop</h3></div>
+                <div class="grid-info"><span class="grid-tag">Logo</span><h3 class="grid-title">Mộc Chi Store</h3></div>
             </div>
         </div>
     </section>
