--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 
             <div class="grid-item video">
                 <video controls>
-                    <source src="ảnh/video.mp4" type="video/mp4">
+                    <source src="ảnh/intro.mp4" type="video/mp4">
                     Trình duyệt của bạn không hỗ trợ thẻ video.
                 </video>
                 <div class="grid-info" style="pointer-events: none;">
